--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-This is a Readme File
+Hi world,
+
+This is the first minutes of my new challenge, #100 days of coding.
+
+Currently PhD student in Neuroscience and psycho-physic. Working on EEG analysis, Data analysis and trying to make things better in this world of sorrow.
+
+See ya
